--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-                                                                                                                        
+                                                                                                                            
+    
     
     
     
@@ -29,7 +30,8 @@
     
     
     <wb-module deploy-name="Hello-World-22.1-22.1">
-                                                                                                                                                                                                                                                
+                                                                                                                                                                                                                                                        
+        
         
         
         
@@ -59,7 +61,8 @@
         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                
+        
         
         
         
@@ -88,7 +91,8 @@
         
         
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
-                                                                                                                                                                                                                                        
+                                                                                                                                                                                                                                                
+        
         
         
         
@@ -117,50 +121,6 @@
         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-                                                                                                                                                                                                                                
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
-                                                                                                                                
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
                                                                                                                                                                                                                                         
         
         
@@ -189,8 +149,57 @@
         
         
         
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
+                                                                                                                                        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/acme-framework"/>
+                                                                                                                                                                                                                                                
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
         <property name="java-output-path" value="/Hello-World-22.0/target/classes"/>
-                                                                
+                                                                        
+        
         
         
         
@@ -198,7 +207,8 @@
         
         
         <property name="context-root" value="Hello-World-22.1"/>
-                                                                                                                                                                                                                                            
+                                                                                                                                                                                                                                                    
+    
     
     
     
@@ -228,7 +238,8 @@
     
     
     </wb-module>
-                                                                                                                    
+                                                                                                                        
+
 
 
 
